langtools/test/tools/javac/generics/rare/6665356/T6665356.out
T6665356.java:40:37: compiler.err.improperly.formed.type.param.missing
T6665356.java:41:40: compiler.err.improperly.formed.type.inner.raw.param
T6665356.java:49:23: compiler.err.improperly.formed.type.param.missing
T6665356.java:50:25: compiler.err.improperly.formed.type.inner.raw.param
4 errors